sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:41: error: i is already defined as variable i
  var i=getValeur(k)
      ^AlgCocktailSort2:41: error: not found: value k
  var i=getValeur(k)
                  ^AlgCocktailSort2:37: error: not found: value k
  var e=getValeur(k)
                  ^AlgCocktailSort2:38: error: not found: value k
  var f=getValeur(k)
                  ^AlgCocktailSort2:39: error: not found: value k
  var g=getValeur(k)
                  ^AlgCocktailSort2:40: error: not found: value k
  var h=getValeur(k)
                  ^